added integration with db

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 db=username:password
 apikey=apikeyvalue
 app_id=idofapp
+password=password
+FIREBASE_USERNAME=user
+FIREBASE_PASSWORD=password
+FIREBASE_CONFIG={"apiKey":"APIKEY","authDomain":"example-12345.firebaseapp.com","projectId":"example-12345","storageBucket":"example-12345.appspot.com","messagingSenderId":"1234567890","appId":"APPID"}
